--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
         </div>
 
         <div class="search-filter">
-            <h3>🔍 検索・フィルター</h3>
+            <h3>🔍 検索・フィルター(未実装)</h3>
             <input type="text" class="search-input" placeholder="キーワードやタグで検索..." id="searchInput">
             <div class="filter-tags" id="filterTags">
                 <div class="filter-tag" data-tag="core">core</div>
